--- a/Missions_to_Mars/static/style.css
+++ b/Missions_to_Mars/static/style.css
@@ -23,6 +23,10 @@
     transition: 0.4s;
 }
 
+.card-title {
+    float: left;
+}
+
 .gallery-block.grid-gallery .item {
     margin-bottom: 20px;
 }
