--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -21,14 +21,14 @@
 
                         <div class="card-body">
                             <h2>Latest News</h2>
-                            <h4 class="card-title">{{ Mars_data.news_title }}</h4>
+                            <h4 class="card-title ">{{ Mars_data.news_title }}</h4>
                             <h6 class="card-subtitle mb-2 text-muted">{{ Mars_data.news_paragraph }}</h6>
                             <p class="card-text">Search <a href="https://mars.nasa.gov/news">Nasa Latest News</a> for more info!</p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-8 card">
+                    <div class="col-8 card item">
                         <div class="card-body">
                             <h2>Featured Image</h2>
                             <a class="lightbox" href="../img/featured_image.jpg">
@@ -45,8 +45,8 @@
                             <h2>Fatcs about Mars</h2>
                             <h4 class="card-title">
                             </h4>
-                            <table class="table table-sm table-striped table-bordered table-responsive-lg">
 
+                            <table class="table table-sm table-striped table-bordered table-responsive-lg">
                                 {{Mars_data.mars_facts}}
                             </table>
                             <p class="card-text">Search <a href="https://space-facts.com/mars/">Mars Facts</a> for more info!</p>
