--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -17,13 +17,14 @@
         <div>
             <div class="container">
                 <div class="row d-flex">
-                    <div class="col-lg-12 card">
-
-                        <div class="card-body">
-                            <h2>Latest News</h2>
-                            <h4 class="card-title ">{{ Mars_data.news_title }}</h4>
-                            <h6 class="card-subtitle mb-2 text-muted">{{ Mars_data.news_paragraph }}</h6>
-                            <p class="card-text">Search <a href="https://mars.nasa.gov/news">Nasa Latest News</a> for more info!</p>
+                    <div class="col-lg-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h2 class="card-title">Latest News</h2>
+                                <h4 class="card-text">{{ Mars_data.news_title }}</h4>
+                                <h6 class="card-subtitle mb-2 text-muted">{{ Mars_data.news_paragraph }}</h6>
+                                <p class="card-text">Search <a href="https://mars.nasa.gov/news">Nasa Latest News</a> for more info!</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -32,7 +33,7 @@
                         <div class="card-body">
                             <h2>Featured Image</h2>
                             <a class="lightbox" href="../img/featured_image.jpg">
-                                <img class="img-fluid image scale-on-hover" src={{Mars_data.featured_image}}>
+                                <img class="img-fluid image scale-on-hover" src={{Mars_data.featured_image}}></a>
                         </div>
                     </div>
                     <div class="col-4 card">
@@ -47,7 +48,7 @@
                             </h4>
 
                             <table class="table table-sm table-striped table-bordered table-responsive-lg">
-                                {{Mars_data.mars_facts}}
+                                {{Mars_data.mars_facts | safe}}
                             </table>
                             <p class="card-text">Search <a href="https://space-facts.com/mars/">Mars Facts</a> for more info!</p>
                         </div>
